<resources>
    <string name="app_name">MyMovies</string>
    <string name="movie_title">Movie Title</string>
    <string name="enter_movie_title_here">Enter movie title here</string>
    <string name="genre">Genre</string>
    <string name="enter_genre_here">Enter genre here</string>
    <string name="year">Year</string>
    <string name="enter_year_here">Enter year here</string>
    <string name="rating">Rating</string>
    <string name="insert">INSERT</string>
    <string name="show_list">SHOW LIST</string>
    <string name="show_all_pg_13_movies">SHOW ALL PG-13 MOVIES</string>

    <string-array name="rating">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
</resources>